# dlitz 2022
#
# See https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
#
# Usage: python3 -m build .

[metadata]
name = adf2dms
version = 0.0.1
author = Darsey Litzenberger
author_email = dlitz@dlitz.net
#license = UNKNOWN
# See https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    #Operating System :: POSIX :: Linux
description = Convert ADF to DMS format
#long_description_content_type = text/markdown
#long_description =
#    Lorem ipsum ...
#    blah blah
url = https://github.com/dlitz/adf2dms

[options]
python_requires = >=3.9
#packages = find:
packages =
    adf2dms
setup_requires =
    setuptools
install_requires =
    crccheck

[options.entry_points]
console_scripts =
    adf2dms = adf2dms.main:main
