# dlitz 2022
#
# See https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
#
# Usage: python3 -m build .

[metadata]
name = adf2dms
version = 0.0.1
author = Darsey Litzenberger
author_email = dlitz@dlitz.net
license_files = LICENSE.txt
# See https://pypi.org/classifiers/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Topic :: Utilities
description = Convert Amiga disk images from ADF to DMS (DiskMasher) format
#long_description_content_type = text/markdown
#long_description =
#    Lorem ipsum ...
#    blah blah
url = https://github.com/dlitz/adf2dms

[options]
python_requires = >=3.9
#packages = find:
packages =
    adf2dms
setup_requires =
    setuptools
install_requires =
    crccheck

[options.entry_points]
console_scripts =
    adf2dms = adf2dms.main:main
